# swing-trader

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: codeql.yml  dependency-review.yml  sbom.yml  stale.yml
backtest/: __init__.py  orchestrator.py  portfolio_tracker.py  reporter.py  trade_simulator.py
backtest/tests/: conftest.py  test_atr_filter.py  test_atr_position_sizing.py  test_capital_allocation_integration.py  test_mcap_atr_sizing.py  test_pattern_type_filter.py  test_portfolio_tracker.py  test_rank_sizing.py  test_reporter.py  test_scan_timestamp.py  test_shadow_score_exit.py  test_staged_take_profit.py  test_trade_simulator.py  test_trailing_stop.py
common/: __init__.py  config.py  events.py  exceptions.py  interface.py  logging.py  market_calendar.py  utils.py
common/tests/: __init__.py  test_config.py  test_events.py  test_exceptions.py  test_logging.py
config/: config.example.yaml  secrets.env.example
config/regimes/: base.yaml  bear_market.yaml  bull_market.yaml  choppy_market.yaml
data/: __init__.py  cache.py  fundamental_adapter.py  interface.py  orchestrator.py  polygon_adapter.py  rate_limiter.py  s3_adapter.py  short_data_provider.py  vix_provider.py  yahoo_adapter.py
data/tests/: test_cache.py  test_interface.py  (+6 more)
event_guard/: guard.py  interface.py  sources.py
execution/: __init__.py  fills_persistence.py  ibkr_adapter.py  interface.py  order_manager.py
indicators/: __init__.py  config.py  core.py  interface.py
journal/: __init__.py  artifacts.py  interface.py  reader.py  replay.py  run_id.py  validator.py  writer.py
monitoring/: __init__.py  collectors.py  interface.py
notifier/: __init__.py  telegram.py
orchestrator/: __init__.py  eod_scan.py  interface.py  plugins.py  stubs.py  summary.py
order_state_machine/: __init__.py  id_generator.py  interface.py  persistence.py  reconciliation.py  state_machine.py
plugins/: __init__.py  interface.py  lifecycle.py  registry.py  validator.py
portfolio/: __init__.py  capital_allocator.py  interface.py  position_health.py  position_rotator.py
reporting/: __init__.py  run_report.py
risk_gate/: __init__.py  capital_usage_check.py  checks.py  engine.py  interface.py  safe_mode.py
scanner/: __init__.py  detector.py  indicator_scoring.py  interface.py  reversal_detector.py  reversal_detector_test.py  trend_pattern_router.py
scripts/: ast_daemon.py  download_bars.py  download_historical_data.py  download_hour_bars.py  download_minute_bars.py  force_liquidate.py  ibkr_watchdog.py  merge_by_symbol.py  pivot_historical_cache.py  run_backtest.py  run_eod_scan.py  run_paper_eod_scan.py  run_paper_intraday.py  run_paper_pre_close_cleanup.py  run_paper_pre_close_recon.py  verify_config.py
strategy/: __init__.py  engine.py  interface.py  pricing.py  sizing.py
universe/: __init__.py  builder.py  data_sources.py  interface.py
(+134 files in other folders)
